--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@
 
 title: Carlo Heissenberg
 email: c.heissenberg (at) qmul.ac.uk
-description: >- # this means to ignore newlines until "baseurl:"
-  UKRI Postdoctoral Fellow at Queen Mary University of London, School of Mathematical Sciences
+description: >- # this means to ignore newlines until "baseurl:" and  I haven't managed to introduce line breaks
+  UKRI Postdoctoral Fellow at QMUL
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
@@ -29,10 +29,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
-#remote_theme: pages-themes/minimal@v0.2.0
+#theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
