--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Carlo Heissenberg
 email: c.heissenberg (at) qmul.ac.uk
 description: >- # this means to ignore newlines until "baseurl:" and  I haven't managed to introduce line breaks
-  UKRI Postdoctoral Fellow at QMUL
+  UKRI Postdoctoral Research Fellow at Queen Mary University of London, School of Mathematical Sciences
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
