--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Carlo Heissenberg
 email: carlo.heissenberg (at) ipht.fr
 description: >- # this means to ignore newlines until "baseurl:" and  I haven't managed to introduce line breaks
- Institut de Physique Théorique, Paris-Saclay
+ Institut de Physique Théorique (IPhT), Saclay
  CEA permanent researcher
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
